--- a/parts/sidebar.html
+++ b/parts/sidebar.html
@@ -20,13 +20,15 @@
     <hr class="wp-block-separator is-style-wide" />
     <!-- /wp:separator -->
 
-    <!-- wp:social-links {"iconColor":"foreground","iconColorValue":"var(--wp--preset--color--foreground)","className":"items-justified-left is-style-logos-only"} -->
+    <!-- wp:social-links {"iconColor":"foreground","iconColorValue":"var:preset|color|foreground","className":"items-justified-left is-style-logos-only"} -->
     <ul class="wp-block-social-links has-icon-color items-justified-left is-style-logos-only">
-        <!-- wp:social-link {"url":"#","service":"twitter"} /-->
+        <!-- wp:social-link {"url":"#","service":"linkedin"} /-->
 
         <!-- wp:social-link {"url":"#","service":"facebook"} /-->
 
-        <!-- wp:social-link {"url":"#","service":"instagram"} /-->
+        <!-- wp:social-link {"url":"#","service":"github"} /-->
+
+        <!-- wp:social-link {"url":"#","service":"mail"} /-->
     </ul>
     <!-- /wp:social-links -->
 </div>
