post list with links only

--- a/parts/sidebar.html
+++ b/parts/sidebar.html
@@ -8,16 +8,16 @@
 
         <!-- wp:site-tagline {"className":"mobile-hide"} /-->
 
-        <!-- wp:separator {"className":"is-style-wide mobile-hide"} -->
-        <hr class="wp-block-separator is-style-wide mobile-hide" />
+        <!-- wp:separator {"opacity":"css","className":"has-text-color alignwide is-style-wide mobile-hide"} -->
+        <hr class="wp-block-separator has-css-opacity has-text-color alignwide is-style-wide mobile-hide" />
         <!-- /wp:separator -->
 
         <!-- wp:navigation {"layout":{"type":"flex","setCascadingProperties":true,"justifyContent":"left","orientation":"vertical"},"style":{"spacing":{"blockGap":"0px"}},"icon":"menu","overlayBackgroundColor":"background","overlayTextColor":"foreground"} /-->
     </div>
     <!-- /wp:group -->
 
-    <!-- wp:separator {"className":"is-style-wide"} -->
-    <hr class="wp-block-separator is-style-wide" />
+    <!-- wp:separator {"opacity":"css","className":"has-text-color alignwide is-style-wide"} -->
+    <hr class="wp-block-separator has-css-opacity has-text-color alignwide is-style-wide" />
     <!-- /wp:separator -->
 
     <!-- wp:social-links {"iconColor":"foreground","iconColorValue":"var:preset|color|foreground","className":"items-justified-left is-style-logos-only"} -->
